# CRISPRitz-plus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_cd_pipeline.yml
cpp/include/: nucleotide_encoding.hpp  offtarget.hpp  output_writer.hpp  pam_search.hpp  profile_data.hpp  profile_merger.hpp  result_merger.hpp  search_configuration.hpp  search_executor.hpp  tst.hpp  tst_search.hpp  tst_utils.hpp  verbosity.hpp
cpp/src/: bindings.cpp  nucleotide_encoding.cpp  offtarget.cpp  output_writer.cpp  pam_search.cpp  profile_data.cpp  profile_merger.cpp  result_merger.cpp  search_configuration.cpp  search_executor.cpp  tst.cpp  tst_search.cpp  tst_utils.cpp
cpp/tests/: test_nucleotide_encoding.cpp  test_offtarget.cpp  test_output_writer.cpp  test_pam_search.cpp  test_profile_data.cpp  test_profile_merger.cpp  test_result_merger.cpp  test_search_configuration.cpp  test_search_executor.cpp  test_tst.cpp  test_tst_search.cpp  test_tst_utils.cpp
docs/migration/: format-divergences.md
src/crispritz_plus/: __main__.py  crispritz_argparse.py  crispritz_errors.py  crispritz_inputargs.py  dna_alphabet.py  exception_handlers.py  genome_io.py  guide.py  offtarget.py  pam.py  progress.py  utils.py  variants.py  verbosity.py
src/crispritz_plus/annotation/: __init__.py  annotation.py  crispritz_annotation_error.py
src/crispritz_plus/crispritz_cpp/: __init__.py  api.py  bulge_mode.py  guide_profile.py  output_format.py  output_mode.py  partition_results.py  search_configuration.py  sort_mode.py
src/crispritz_plus/enrichment/: __init__.py  crispritz_enrichment_error.py  enricher.py  enrichment_pair.py  variants.py
src/crispritz_plus/indexing/: __init__.py  tst_manager.py
src/crispritz_plus/plots/: __init__.py  crispritz_report_errors.py  plots.py  report.py
src/crispritz_plus/scores/: __init__.py  crispritz_scores.py  crispritz_scores_errors.py  shard_scoring.py
src/crispritz_plus/scores/cfd/: __init__.py  cfdscore.py
src/crispritz_plus/search/: __init__.py  tst_explorer.py
tests/: test_cfd.py  test_config.py  test_tsv_serialization.py
tests/annotation/: conftest.py  test_annotation.py
tests/core/: conftest.py  test_dna_alphabet.py  test_genome_io.py  test_guide.py  test_pam.py  test_variants.py
tests/crispritz_cpp/: conftest.py  test_partition_merge.py  test_search_command.py
tests/enrichment/: test_enricher.py
tests/plots/: conftest.py  test_plots.py
